#What is new in v1.0.24

- Bug Fix:
    search by rebec identification number (primary/trial id)
    'Continue' button for register a trial now working in both 
  languages
- Registry table now in ascending order
- 'View all' button in home


#What is new in v1.0.23

- Users can delete attachments
- Users can attach url links instead of files
- Minor bug fix (fixtures)

#What is new in v1.0.22

- Observational fields implemented
- Fixing bug that caused mistranslation labels in trial


#What is new in v1.0.21:

- Fixing translations errors in several places
- Fixing translations errors in forms (i.e. agreement form, in terms of use)
- Private attachments is now visible for reviers.
- Implemented public scoreboard
- Bug fixe in Registration date format
- Bug fixe in ictrp xml
- When generating ictrp xml, if public contact doesn't exist, scientific contact
will be used as a public contact


#What is new in v1.0.20:

- Basic Search
- UTRN label renomed to UTN
- Recruitation dates in clinical trials preview
- UTN number visible in clinical trial preview
- Registration date visible for registred trials
- Base Export in ICTRP xml format