@@ -1,24 +1,48 @@
 from repository.models import ClinicalTrial
 from django.core.management import BaseCommand
+from reviewapp.views import send_opentrials_email
+from vocabulary.models import MailMessage
+from datetime import datetime
 
 class Command(BaseCommand):
     
-    def is_outdate(self,start_planned, end_planned, start_actual, end_actual):
-        #datetime.strptime(qu.enrollment_end_planned, "%Y-%m-%d")
+    def is_outdate(self,ct):
+
+        now = datetime.today()
+
+        start_planned = ct.enrollment_start_planned
+        end_planned = ct.enrollment_end_planned
+        start_actual = ct.enrollment_start_actual
+        end_actual = ct.enrollment_end_planned
+
+        try:
+            if start_planned is not None:
+                start_planned = datetime.strptime(start_planned, "%Y-%m-%d")            
+                if start_planned < now and start_actual is None:
+                    return True
+                        
+            if end_planned is not None:
+                end_planned = datetime.strptime(end_planned, "%Y-%m-%d")
+                if end_planned < now and end_actual is None:
+                    return True
+        except ValueError:
+            return True
+            
         return False
                 
     def job(self):
-        # This will be executed every 1 day minutes
-        #debug only
-        for ct in ClinicalTrial.objects.filter(status='published'):
-            start_planned = ct.enrollment_start_planned
-            end_planned = ct.enrollment_end_planned
-            start_actual = ct.enrollment_start_actual
-            end_actual = ct.enrollment_end_planned
+        # This will be executed each 1 day
+        for ct in ClinicalTrial.objects.all():
 
-            outdated = self.is_outdate(start_planned, end_planned, start_actual, end_actual)
-
+            outdated = self.is_outdate(ct)
+             
             if outdated != ct.outdated:
+
+                if outdate:
+                    subject = _("Trial enrollment date checker")            
+                    messasge = MailMessage.objects.filter(label='outdated')[0].description
+                    send_opentrials_email(subject, message, ct.submission.creator.email)
+
                 ct.outdated = outdated
                 ct.save()
     
