@@ -49,7 +49,12 @@
         <ul>
         {% for ct in clinical_trials %}
             <li>
-                <a class="NewsTitle" href="{% url repository.trial_registered ct.trial_id %}">{{ ct.short_title }}</a>
+                
+                <a class="NewsTitle" href="{% url repository.trial_registered ct.trial_id %}">
+                {% if ct.outdated %}
+                    <img class="NewsTitle" src={{outdated_flag}} />
+                {% endif %}
+                {{ ct.short_title }}</a>
                 <p>
                     <b>{% trans 'Primary Id Number' %}</b>: <a class="pnumber" href="{% url repository.trial_registered ct.trial_id %}">{{ ct.trial_id }}</a><br/>
                 </p>
